--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,17 @@
   "description": "Sever side architecture of Clarify app.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "Artem Nikolaiev",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
+  },
+  "engines": {
+    "node": "12.9.1",
+    "npm": "6.11.2"
   }
 }
