--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Artem Nikolaiev",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^1.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.2",
