--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-sslify": "^1.2.0",
     "mongoose": "^5.8.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
+    "stripe": "^8.0.1",
     "validator": "^12.1.0"
   },
   "engines": {
