--- a/package.json
+++ b/package.json
@@ -14,18 +14,24 @@
   "author": "Artem Nikolaiev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
-    "cookie-session": "^1.3.3",
+    "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
+    "express-rate-limit": "^5.0.0",
     "express-sslify": "^1.2.0",
-    "mongoose": "^5.8.2",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0",
+    "helmet": "^3.21.2",
+    "hpp": "^0.2.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.8.7",
+    "morgan": "^1.9.1",
     "stripe": "^8.0.1",
-    "validator": "^12.1.0"
+    "validator": "^12.1.0",
+    "xss-clean": "^0.1.1"
   },
   "engines": {
     "node": "12.9.1",
