--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "express-sslify": "^1.2.0",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
+    "html-to-text": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.4.2",
+    "pug": "^2.0.4",
+    "sendgrid": "^5.2.3",
     "stripe": "^8.0.1",
     "validator": "^12.1.0",
     "xss-clean": "^0.1.1"
