--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node index.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
+    "ngrok": "npx ngrok http 5000"
   },
   "author": "Artem Nikolaiev",
   "license": "ISC",
